Fix runner and hard cutoff on bottom/top menus

--- a/desktop/style.scss
+++ b/desktop/style.scss
@@ -15,6 +15,18 @@ window.Bar {
   background-color: $bg-color;
 }
 
+.bar-overlay {
+  background-image: linear-gradient(
+    90deg,
+    transparent,
+    transparent 86px,
+    $bg-color 186px,
+    $bg-color calc(100% - 105px),
+    transparent calc(100% - 5px),
+    transparent 100%
+  );
+}
+
 .bar.left {
   padding: 15px 5px;
 }
